@@ -25,6 +25,10 @@ Version 1.8.4 patchlevel 5                                 ??? ??,  2011
   work for accessing, everything else about ansi_string has been heavily
   modified.
 
+  ptab_firstentry_new and ptab_nextentry_new now take a pointer to a 
+  char * to store a read-only copy of the current entry's key in, instead
+  of a user-supplied buffer that may or may not be big enough.
+
 Version 1.8.4 patchlevel 4                                 May 05,  2011
 
   PE_REGS now contains switch, @switch, iter, @dol and env (%0-%9).
